fix: Update restore step in deploy.yml for Release configuration and refactor JobInfoDto namespace

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,8 @@ jobs:
                       **/*.csproj
                       **/nuget.config
 
-            - name: Restore
-              run: dotnet restore "./${{ env.PROJECT_FILE }}"
+            - name: Restore (Release)
+              run: dotnet restore "./${{ env.PROJECT_FILE }}" -p:Configuration=Release
 
             - name: Build (Release)
               run: dotnet build "./${{ env.PROJECT_FILE }}" -c Release --no-restore
